--- a/Lithp Extension/Resources/popup.html
+++ b/Lithp Extension/Resources/popup.html
@@ -1,3 +1,9 @@
+<!--
+Lithp
+Created by Samuel Corke on 17th March 2024.
+-->
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,6 +12,5 @@
     <script type="module" src="popup.js"></script>
 </head>
 <body>
-    <strong>Hello World!</strong>
 </body>
 </html>
