--- a/Lithp/Base.lproj/Main.html
+++ b/Lithp/Base.lproj/Main.html
@@ -1,3 +1,11 @@
+<!--
+Lithp
+
+Created by Samuel Corke on 17th March 2024.
+-->
+
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,9 +19,12 @@
 </head>
 <body>
     <img src="../Icon.png" width="128" height="128" alt="Lithp Icon">
-    <p class="state-unknown">You can turn on Lithp’s extension in Safari Extensions preferences.</p>
-    <p class="state-on">Lithp’s extension is currently on. You can turn it off in Safari Extensions preferences.</p>
-    <p class="state-off">Lithp’s extension is currently off. You can turn it on in Safari Extensions preferences.</p>
-    <button class="open-preferences">Quit and Open Safari Extensions Preferences…</button>
+    <p class="state-unknown">Thalvation awaitth in the preferentheth menu..</p>
+    <p class="state-on">If you can read thith then don't toutth anything! Only confuthion lay waithing in Thafari'th Exthenthionth preferentheth...</p>
+    <p class="state-off">"If thomething doethn't thound righth then you mighth wanth 2 thwith Lithp on in Thafari's Exthenthionth preferentheth...</p>
+    <button class="open-preferences">Let'th dive in...</button>
 </body>
 </html>
+
+
+
